<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="408dp"
        android:layout_height="498dp"
        android:background="#0B142C"
        android:backgroundTintMode="add"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv1"
                android:layout_width="381dp"
                android:layout_height="match_parent"
                android:layout_span="3"
                android:layout_weight="1"
                android:background="#192840"
                android:gravity="center"
                android:maxLength="30"
                android:text="@string/tv1"
                android:textAlignment="viewEnd"
                android:textColor="#79CF23"
                android:textSize="100sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/bt7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:backgroundTint="#4E4545"
                android:onClick="Numeros"
                android:text="@string/tv8" />

            <Button
                android:id="@+id/bt8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:backgroundTint="#4E4545"
                android:text="@string/tv9" />

            <Button
                android:id="@+id/bt9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:backgroundTint="#4E4545"
                android:text="@string/tv10" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/bt4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:backgroundTint="#4E4545"
                android:text="@string/tv5" />

            <Button
                android:id="@+id/bt5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:backgroundTint="#4E4545"
                android:text="@string/tv6" />

            <Button
                android:id="@+id/bt6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:backgroundTint="#4E4545"
                android:text="@string/tv7" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/bt1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:backgroundTint="#4E4545"
                android:text="@string/tv2" />

            <Button
                android:id="@+id/bt2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:backgroundTint="#4E4545"
                android:text="@string/tv3" />

            <Button
                android:id="@+id/bt3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:backgroundTint="#4E4545"
                android:text="@string/tv4" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btSuma"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:backgroundTint="#F46A00"
                android:onClick="Numeros"
                android:text="@string/tv11" />

            <Button
                android:id="@+id/bt0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:backgroundTint="#4E4545"
                android:text="@string/tv15" />

            <Button
                android:id="@+id/btResta"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:backgroundTint="#F46A00"
                android:text="@string/tv12" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btMult"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:backgroundTint="#F46A00"
                android:text="@string/tv13" />

            <Button
                android:id="@+id/btDiv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:backgroundTint="#F46A00"
                android:text="@string/tv14" />

            <Button
                android:id="@+id/btIgual"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:backgroundTint="#F46A00"
                android:onClick="Resultado"
                android:text="@string/tv16" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button16"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_span="1"
                android:layout_weight="1"
                android:backgroundTint="#F46A00"
                android:onClick="Restaurar"
                android:text="@string/tv17" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/tvValor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="44dp"
        android:text="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <TextView
        android:id="@+id/tvValor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="44dp"
        android:text="0"
        app:layout_constraintStart_toEndOf="@+id/tvValor1"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <TextView
        android:id="@+id/tvSigno"
        android:layout_width="105dp"
        android:layout_height="25dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="36dp"
        android:text="vacio"
        app:layout_constraintStart_toEndOf="@+id/tvValor2"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>